--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
         {
             "src": "icons/android-chrome-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
         }
     ]
 }
