--- a/manifest.json
+++ b/manifest.json
@@ -22,8 +22,7 @@
         {
             "src": "icons/android-chrome-192x192.png",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any"
+            "type": "image/png"
         }
     ]
 }
