--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "just-a-little-screaming-snake.github.io",
   "version": "1.0.0",
   "description": "My NEA",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
